[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemies/BlackMage/BlackBoss.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemies/BlackMage/BlackMage.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 50 )

[node name="BlackBoss" type="KinematicBody2D" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 2 )]
scale = Vector2( 2, 2 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 30 )
shape = SubResource( 1 )

[node name="Fireballs" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="DarkLight" type="Timer" parent="."]

[node name="ComboFireball" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Fireballs" to="." method="_on_Fireballs_timeout"]
[connection signal="timeout" from="DarkLight" to="." method="_on_DarkLight_timeout"]
[connection signal="timeout" from="ComboFireball" to="." method="_on_ComboFireball_timeout"]
